# bank-fraud-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
dashboards/: README.md
data/synthetic/: accounts.csv  alerts.csv  customers.csv  devices.csv  edges.csv  investigations.csv  login_events.csv  test.csv  train.csv
docs/: ACC_MIGRATION_GUIDE.md  feature_dictionary.md  fraud_strategy.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  04_ensemble_and_ranking.ipynb  05_graph_features.ipynb  06_monitoring_and_drift.ipynb  README.md
reports/: alerts_scored.csv  ato_metrics.json  baseline_metrics.json  drift_report.json  ensemble_metrics.json  fairness_report.json  feature_importance.csv  governance_report.md  model_card.md
scripts/: generate_synthetic_data.py  score_alerts.py  simulate_retraining_monitoring.py  train_pipeline.py
src/: config.py  data_loader.py  feature_store.py  preprocessing.py  rules_engine.py
src/explainability/: shap_reports.py
src/models/: anomaly.py  gnn.py  graph_features.py  logistic.py  ranker.py  xgb_model.py
src/monitoring/: drift.py  performance_tracking.py
src/scoring/: batch_scoring.py  realtime_scoring.py
src/utils/: io.py
tests/: test_drift.py  test_feature_store.py  test_graph_features.py  test_ranker.py  test_rules_engine.py
